--- a/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj
+++ b/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj
@@ -130,6 +130,10 @@
   <ItemGroup>
     <ClInclude Include="Header.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Output.txt" />
+    <Text Include="Text.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
