--- a/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj.filters
+++ b/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj.filters
@@ -27,4 +27,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="Output.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
