--- a/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj
+++ b/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj
@@ -86,8 +86,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <CompileAs>CompileAsC</CompileAs>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -132,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Output.txt" />
+    <Text Include="Temp.txt" />
     <Text Include="Text.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
