--- a/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj.filters
+++ b/Lab 3.3(10) [Работа со строками]/Lab 3.3(10) [Работа со строками].vcxproj.filters
@@ -34,5 +34,8 @@
     <Text Include="Output.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="Temp.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
